--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -25,3 +25,26 @@ h1 {
 h2 {
   font-size: 18px;
 }
+
+footer {
+  width: 100%;
+  height: 92px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #fff;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+button {
+  width: 90%;
+  height: 61px;
+  font-size: 20px;
+  background: #cbcbcb;
+  color: #fff;
+  font-family: "Roboto", sans-serif;
+  border-radius: 50px;
+}
