--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -48,3 +48,75 @@ button {
   font-family: "Roboto", sans-serif;
   border-radius: 50px;
 }
+
+main {
+  margin: 123px 0;
+  padding: 0 19px;
+  color: #333333;
+}
+
+main > p {
+  font-family: "Righteous", cursive;
+  font-size: 26px;
+  line-height: 32px;
+  letter-spacing: 0.018em;
+  margin: 0 0 17px 0;
+}
+
+ul {
+  width: 100%;
+  display: flex;
+  overflow-x: scroll;
+}
+
+li {
+  width: 172px;
+  height: 216px;
+  background: #fff;
+  padding: 18px 14px;
+  border-radius: 9px;
+  flex-shrink: 0;
+  box-shadow: 0px 0px 10px -4px rgba(0, 0, 0, 0.25);
+}
+
+li:not(:last-child) {
+  margin: 0 16px 0 0;
+}
+
+li img {
+  width: 100%;
+  height: 87px;
+  object-fit: cover;
+  border-radius: 4px;
+  margin: 0 0 6px 0;
+}
+
+.title {
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 19px;
+  margin: 0 0 4px 0;
+}
+
+.description {
+  font-size: 15px;
+  line-height: 18px;
+  color: #a6a6a6;
+  margin: 0 0 5px 0;
+}
+
+.price {
+  font-size: 16px;
+  line-height: 19px;
+  color: #000000;
+}
+
+::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+::-webkit-scrollbar {
+  background: transparent;
+}
+::-webkit-scrollbar-thumb {
+  background: transparent;
+}
