--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -15,6 +15,7 @@ header {
   left: 0;
   padding: 15px 0 18px 20px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  z-index: 1;
 }
 
 h1 {
@@ -70,6 +71,7 @@ ul {
 }
 
 li {
+  position: relative;
   width: 172px;
   height: 216px;
   background: #fff;
@@ -77,6 +79,9 @@ li {
   border-radius: 9px;
   flex-shrink: 0;
   box-shadow: 0px 0px 10px -4px rgba(0, 0, 0, 0.25);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 li:not(:last-child) {
@@ -89,6 +94,31 @@ li img {
   object-fit: cover;
   border-radius: 4px;
   margin: 0 0 6px 0;
+}
+
+.counter {
+  position: absolute;
+  bottom: 18px;
+  right: 14px;
+  width: 47px;
+  height: 19px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 16px;
+  line-height: 19px;
+}
+
+.minus {
+  color: #cf2b2b;
+}
+
+.plus {
+  color: #32b72f;
+}
+
+li .counter.hidden {
+  display: none;
 }
 
 .title {
